# nova-editor

./: .gitignore  .mcp.json  Cargo.toml  PRD.md  bash.exe.stackdump  windows-mcp-issues.txt
.cargo/: config.toml
.github/workflows/: release.yml
renderer/: Cargo.toml
renderer/src/: ai.rs  commands.rs  completion.rs  diff.rs  document.rs  ext_detail.rs  extensions.rs  git.rs  gpu.rs  highlight.rs  layout.rs  lsp.rs  macos_menu.rs  main.rs  markdown.rs  marketplace.rs  media.rs  menus.rs  nav.rs  perf.rs  quad.rs  quad.wgsl  render.rs  settings.rs  state.rs  syntax.rs  terminal.rs  textmate.rs  theme.rs  update.rs  widgets.rs  workspace.rs
renderer/src/ptyhost/: client.rs  daemon.rs  mod.rs
renderer/src/ui/: chat_panel.rs  editor_view.rs  ext_detail_view.rs  extensions_panel.rs  feedback_form.rs  info_page.rs  mod.rs  outline_panel.rs  search_panel.rs  settings_editor.rs  source_control_panel.rs  terminal_panel.rs
tools/: compare.py  issue-poller.sh
