[package]
name = "nova-renderer"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nova"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
glyphon = "0.6"
pollster = "0.4"
ropey = "1.6"
wgpu = "22"
winit = "0.30"
