[package]
name = "aether-renderer"
version = "0.2.33"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
fancy-regex = "0.18.0"
glyphon = "0.6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
pollster = "0.4"
unicode-width = "0.2"
portable-pty = "0.8"
resvg = "0.45"
self_update = { version = "0.42", default-features = false, features = ["rustls"] }
pulldown-cmark = { version = "0.13", default-features = false }
rfd = "0.15"
vte = "0.13"
ropey = "1.6"
rquickjs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
# VS Code-style TextMate highlighting (pure-Rust fancy-regex backend — no C deps,
# keeps the cross-platform release matrix safe). Bundles common-language syntaxes.
syntect = { version = "5", default-features = false, features = ["parsing", "regex-fancy", "default-syntaxes"] }
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-json = "0.23"
tree-sitter-rust = "0.23"
ureq = { version = "2", features = ["tls"] }
wgpu = "22"
winit = "0.30"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Native macOS menu bar (system menu, top of the screen). Other platforms draw the
# custom in-window menu instead.
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.16"
